--- a/estilos/estilos_pd.css
+++ b/estilos/estilos_pd.css
@@ -67,3 +67,71 @@
     background-color:rgb(27, 11, 43);
     transform: scale(0.98); 
 }
+
+/* Contenedor de productos */
+.cont_productos {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding: 1rem;
+    background-color: #f0f0f0;
+}
+
+/* Tarjetas */
+.tarjeta {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ccc;
+    padding: 15px;
+    margin: 15px;
+    text-align: center;
+    width: 250px;
+    height: 400px;
+    /* Aumentamos la altura de la tarjeta */
+    background-color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.tarjeta img {
+    width: 100%;
+    height: 200px;
+    /* Ajustamos la altura de la imagen */
+    object-fit: cover;
+    /* Asegura que la imagen se ajuste sin deformarse */
+    border-bottom: 1px solid #ccc;
+    /* Línea divisoria entre la imagen y el contenido */
+}
+
+.tarjeta .contenido {
+    padding: 10px;
+    flex-grow: 1;
+}
+
+.tarjeta h3 {
+    font-size: 1.2rem;
+    color: #333;
+    margin: 0 0 10px 0;
+    font-weight: bold;
+}
+
+
+
+.tarjeta .precio {
+    font-size: 1.1rem;
+    color: #333;
+    font-weight: bold;
+}
+
+.tarjeta .btn {
+    background-color: #f39c12;
+    padding: 10px;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 5px;
+    margin-top: 10px;
+    display: inline-block;
+}
+
+.tarjeta .btn:hover {
+    background-color: #e67e22;
+}
