--- a/estilos/estilos_perfil.css
+++ b/estilos/estilos_perfil.css
@@ -2,10 +2,14 @@
 .cabecera {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     background-color: #f5f5f5;
     padding: 1.5rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.cabecera .datos_us{
+    display: flex;
+    flex-direction: column;
+    margin:5px;
 }
 
 .cabecera .cont_img {
@@ -29,7 +33,7 @@
 .cabecera .cont_name h3 {
     font-size: 1.4rem;
     color: #333;
-    margin: 0;
+    margin-top: 0;
     font-weight: bold;
 }
 
@@ -37,13 +41,13 @@
     font-size: 1rem;
     color: #666;
     margin: 0;
+    max-width: 200px;
     font-style: italic;
 }
 
 /* Navegación */
 .cont_nav_perfil {
     background-color: #ffffff;
-    border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 0.5rem 1rem;
 }
@@ -62,7 +66,6 @@
     color: #007BFF;
     padding: 0.5rem 1rem;
     background-color: #e0e0e0;
-    border-radius: 4px;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -71,78 +74,6 @@
     background-color: #0056b3;
 }
 
-/* Contenedor de productos */
-.cont_productos {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    justify-content: space-between;
-    padding: 1rem;
-    background-color: #f0f0f0;
-}
-
-/* Tarjetas */
-.tarjeta {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid #ccc;
-    padding: 15px;
-    margin: 15px;
-    text-align: center;
-    width: 250px;
-    height: 400px;
-    /* Aumentamos la altura de la tarjeta */
-    background-color: #fff;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.tarjeta img {
-    width: 100%;
-    height: 200px;
-    /* Ajustamos la altura de la imagen */
-    object-fit: cover;
-    /* Asegura que la imagen se ajuste sin deformarse */
-    border-bottom: 1px solid #ccc;
-    /* Línea divisoria entre la imagen y el contenido */
-}
-
-.tarjeta .contenido {
-    padding: 10px;
-    flex-grow: 1;
-}
-
-.tarjeta h3 {
-    font-size: 1.2rem;
-    color: #333;
-    margin: 0 0 10px 0;
-    font-weight: bold;
-}
-
-.tarjeta .descripcion {
-    font-size: 1rem;
-    color: #666;
-    margin: 0 0 10px 0;
-}
-
-.tarjeta .precio {
-    font-size: 1.1rem;
-    color: #333;
-    font-weight: bold;
-}
-
-.tarjeta .btn {
-    background-color: #f39c12;
-    padding: 10px;
-    text-decoration: none;
-    color: #fff;
-    border-radius: 5px;
-    margin-top: 10px;
-    display: inline-block;
-}
-
-.tarjeta .btn:hover {
-    background-color: #e67e22;
-}
 
 .box-confi {
     position: relative;
